--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "autostudio-mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@google/genai": "^1.30.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.25",
+    "expo-blur": "^15.0.7",
+    "expo-font": "^14.0.9",
+    "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-router": "^6.0.15",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.554.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
